Hash replaced with marisa-trie for dictionary representation. Beta version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_definitions (-g -Wall -pedantic -std=c++0x)
 set (SOURCES_GENHASHTABLE
         genhashtable.cpp)
 set (SOURCES_MAIN
-        model.cpp model.h main.cpp)
+        dictionary.cpp dictionary.h model.cpp model.h main.cpp)
 
 find_package (Qt4 REQUIRED)
 set(QT_DONT_USE_QTGUI false)
@@ -17,4 +17,4 @@ add_executable (genhashtable ${SOURCES_GENHASHTABLE})
 target_link_libraries (genhashtable ${QT_LIBRARIES})
 
 add_executable (main ${SOURCES_MAIN})
-target_link_libraries (main ${QT_LIBRARIES})
+target_link_libraries (main ${QT_LIBRARIES} marisa)
