Vectors replaced with arrays

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,14 @@ add_definitions (-g -Wall -pedantic -std=c++0x)
 set (SOURCES_GENHASHTABLE
         genhashtable.cpp)
 set (SOURCES_MAIN
-        dictionary.cpp dictionary.h model.cpp model.h main.cpp)
+        model.cpp model.h main.cpp)
 
 find_package (Qt4 REQUIRED)
 set(QT_DONT_USE_QTGUI false)
 include (${QT_USE_FILE})
 
 add_executable (genhashtable ${SOURCES_GENHASHTABLE})
-target_link_libraries (genhashtable ${QT_LIBRARIES})
+target_link_libraries (genhashtable ${QT_LIBRARIES} marisa)
 
 add_executable (main ${SOURCES_MAIN})
 target_link_libraries (main ${QT_LIBRARIES} marisa)
