genhashtable.cpp replaced with gendict.cpp
which converts opencorpora dictionary to internal representation
including paradigms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,17 @@ set (PROJECT syntaxanalyzer)
 project (${PROJECT})
 add_definitions (-g -Wall -pedantic -std=c++0x)
 
-set (SOURCES_GENHASHTABLE
-        genhashtable.cpp)
+set (SOURCES_GENDICT
+        gendict.cpp paradigm.h paradigm.cpp)
 set (SOURCES_MAIN
-        model.cpp model.h main.cpp)
+        model.cpp model.h main.cpp paradigm.h paradigm.cpp)
 
 find_package (Qt4 REQUIRED)
 set(QT_DONT_USE_QTGUI false)
 include (${QT_USE_FILE})
 
-add_executable (genhashtable ${SOURCES_GENHASHTABLE})
-target_link_libraries (genhashtable ${QT_LIBRARIES} marisa)
+add_executable (gendict ${SOURCES_GENDICT})
+target_link_libraries (gendict)
 
 add_executable (main ${SOURCES_MAIN})
-target_link_libraries (main ${QT_LIBRARIES} marisa)
+target_link_libraries (main ${QT_LIBRARIES})
